--- a/css/styles.css
+++ b/css/styles.css
@@ -15,15 +15,24 @@ body {
     height: 100vh;
     max-height: 100%;
     justify-content: center;
-    align-content: center;
+    align-items: center;
+}
+
+.menu.inactive {
+    position: absolute;
+    transform: translateX(calc(-50vw - 50%));
+    transition: transform 1s ease
 }
 
 .menu {
+    position: absolute;
     border: 1px solid black;
     border-radius: 10px;
     padding: 1rem;
     width: 100%;
     max-width: 60rem;
+    transform: translateX(0px);
+    transition: transform 1s ease
 }
 
 p {
@@ -112,4 +121,12 @@ p {
 
 .letter_field p {
     text-transform: uppercase;
+}
+
+.icon {
+    position:absolute;
+    right: 3rem;
+    top: 2rem;
+    font-size: 10rem;
+    padding: 0;
 }
