--- a/css/styles.css
+++ b/css/styles.css
@@ -3,63 +3,55 @@ html {
 }
 body {
     font-family: 'Tilt Neon', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* overflow: hidden; */
+    overflow: hidden;
     background-color: rgb(223, 223, 223);
 }
 
-.container {
-    display: inline-block;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    width: 70vw;
-    height: 100vh;
-    max-height: 100%;
-    justify-content: center;
-    align-items: center;
+.-grid2.wordleOpen {
+    /* right: 0px; */
+    transition: all 1s ease;
+    transform: translateX(-100vw);
 }
 
+.-grid2 {
+    position: absolute;
+    display: grid;
+    grid-template-columns: 100vw 100vw;
+    justify-content: space-evenly;
+    justify-items: center;
+    transform: translateX(0px);
+    transition: all 1s ease;
+}
 
-/* .wordle.inactive.icon {
-    left: 3rem;
-} */
-
-
-.wordle.inactive {
-    transform: translateX(calc(50vw + 50%));
-    transition: transform 1s ease
+.menu_con {
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    width: 100vw;
 }
 
 .wordle {
-    height: 100%;
+    height: 100vh;
     display: grid;
-    transition: transform 1s ease;
-    transform: translateX(0px);
+    width: 100vw;
 }
 
 .icon {
     position:absolute;
-    right: 3rem;
+    right: 10rem;
     top: 2rem;
     font-size: 10rem;
     padding: 0;
 }
 
-.menu.inactive {
-    position: absolute;
-    transform: translateX(calc(-50vw - 50%));
-    transition: transform 1s ease
-}
-
 .menu {
-    position: absolute;
     border: 1px solid black;
     border-radius: 10px;
     padding: 1rem;
     width: 100%;
     max-width: 60rem;
-    transform: translateX(0px);
-    transition: transform 1s ease
 }
 
 p {
